--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -22,3 +22,57 @@
 .hide-scrollbar::-webkit-scrollbar {
   display: none; /* Webkit (Chrome, Safari) */
 }
+
+.curve-outside {
+  box-shadow: 35px 35px 0 20px blue;
+  pointer-events: none;
+}
+
+
+.curve-top  {
+  position: absolute;
+  right: 3px;
+  top: -53px;
+  width: 45px;
+  height: 45px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow:20px 20px 0 0px white;
+  pointer-events: none;
+}
+.curve-bottom  {
+  position: absolute;
+  right: 3px;
+  bottom: -53px;
+  width: 45px;
+  height: 45px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow:20px -20px 0 0px white;
+  pointer-events: none;
+}
+
+
+.navigation  {
+  position: absolute;
+  right: -21px;
+  bottom: -53px;
+  width: 45px;
+  height: 45px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow:20px -20px 0 0px white;
+  pointer-events: none;
+}
+
+.navigation-top  {
+  position: absolute;
+  right: -21px;
+  top: -53px;
+  width: 45px;
+  height: 45px;
+  background-color: transparent;
+  border-radius: 50%;
+  box-shadow:20px 20px 0 0px white;
+  pointer-events: none;
+}
