--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  font-family: "Roboto Slab", serif;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -28,8 +32,7 @@
   pointer-events: none;
 }
 
-
-.curve-top  {
+.curve-top {
   position: absolute;
   right: -8px;
   top: -53px;
@@ -37,10 +40,10 @@
   height: 45px;
   background-color: transparent;
   border-radius: 50%;
-  box-shadow:20px 20px 0 0px white;
+  box-shadow: 20px 20px 0 0px white;
   pointer-events: none;
 }
-.curve-bottom  {
+.curve-bottom {
   position: absolute;
   right: -8px;
   bottom: -53px;
@@ -48,12 +51,11 @@
   height: 45px;
   background-color: transparent;
   border-radius: 50%;
-  box-shadow:20px -20px 0 0px white;
+  box-shadow: 20px -20px 0 0px white;
   pointer-events: none;
 }
 
-
-.navigation  {
+.navigation {
   position: absolute;
   right: -25px;
   bottom: -53px;
@@ -61,11 +63,11 @@
   height: 45px;
   background-color: transparent;
   border-radius: 50%;
-  box-shadow:20px -20px 0 0px white;
+  box-shadow: 20px -20px 0 0px white;
   pointer-events: none;
 }
 
-.navigation-top  {
+.navigation-top {
   position: absolute;
   right: -25px;
   top: -53px;
@@ -73,6 +75,6 @@
   height: 45px;
   background-color: transparent;
   border-radius: 50%;
-  box-shadow:20px 20px 0 0px white;
+  box-shadow: 20px 20px 0 0px white;
   pointer-events: none;
 }
