--- a/client-next/src/app/globals.css
+++ b/client-next/src/app/globals.css
@@ -3,8 +3,15 @@
 @tailwind utilities;
 
 
-@layer base {
+/* @layer base {
   html {
     font-family: "Proxima Nova", system-ui, sans-serif;
   }
+} */
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Roboto Condensed", sans-serif;
 }
